--- a/v2.0/package.json
+++ b/v2.0/package.json
@@ -13,6 +13,7 @@
         "@dnd-kit/core": "^6.3.1",
         "@dnd-kit/sortable": "^10.0.0",
         "@dnd-kit/utilities": "^3.2.2",
+        "@supabase/supabase-js": "^2.89.0",
         "idb-keyval": "^6.2.1",
         "lucide-react": "^0.263.1",
         "lz-string": "^1.5.0",
